# hexd

./: .gitignore  Cargo.toml  README.md
examples/: bases.rs  grouped.rs  simple.rs
src/: hexdump.rs  lib.rs  main.rs  options.rs  reader.rs  test.rs  writer.rs
tests/: autoskip.rs  bases.rs  flush.rs  grouping.rs  ints.rs  mod.rs  range.rs  show.rs
tests/common/: mod.rs
